Fix spacing at the bottom of form pages

--- a/www/form/app-form.less
+++ b/www/form/app-form.less
@@ -177,7 +177,8 @@
                 .cp-form-creator-add-full {
                     display: flex;
                     flex-flow: column;
-                    margin: 20px 0px 100px 0px;
+                    margin: 20px 0px 0px 0px;
+                    padding-bottom: 100px;
                     &> div:first-child {
                         display: flex;
                         height: 100%;
@@ -224,7 +225,8 @@
 
                 .cp-form-send-container {
                     text-align: center;
-                    margin: 50px auto 100px auto;
+                    margin: 50px auto 0px auto;
+                    padding-bottom: 100px;
                     button {
                         &:not(:last-child) {
                             margin-right: 10px;
